--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: Update LCU Workflow
+name: Update
 on:
   push:
   workflow_dispatch:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: Update LCU Job
+    name: Update Job
     runs-on: windows-2019
     steps:
       - name: Checkout
@@ -26,23 +26,35 @@ jobs:
           LOLLOGIN: ${{ secrets.lollogin }}
         run: $env:LOLLOGIN | Out-File -Encoding UTF8 'lollogin.json'
 
-      - name: Clone gh-pages output folder
+      - name: Setup gh-pages output folder
         shell: bash
-        run: git clone --single-branch -b gh-pages "$(git remote get-url origin)" out
+        run: |
+          git clone --single-branch -b gh-pages "$(git remote get-url origin)" out
+          cd out
+          git rm -rf --ignore-unmatch .
+          git clean -fxd
 
       - name: Run update.ps1
         run: .\update.ps1
         shell: powershell # Use powershell 5 (not 7)
 
-      - name: Commit Changes
+      - name: Copy swagger-ui to output folder
+        shell: bash
+        run: |
+          cp README.md out/
+          cp -r swagger-ui/dist out/tool
+          sed -i 's|"https://petstore.swagger.io/v2/swagger.json"|"../openapi.json"|' out/tool/index.html
+
+      - name: Push changes in output folder
         shell: bash
         run: |
           cd out
           git config user.name 'Github Actions'
           git config user.email "$(git show -s --format='%ae' HEAD)"
-          changes=$(git diff -U0 | grep '^[+-][^+-]' |
+          git add .
+          changes=$(git diff --cached -U0 | grep '^[+-][^+-]' |
             grep -v 'Http' | grep -v 'LOCKED"' | wc -l)
           if [ $changes -gt 0 ]; then
-            git commit -am "Update $(date -u -Is), script $(git log --pretty=format:%h -n 1)"
+            git commit -m "Update $(date -u -Is), script $(git log --pretty=format:%h -n 1)"
             git push
           fi
